// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LskDialogAddInvoice should match snapshot: dialog not visible 1`] = `
<div role="dialog"
     class="v-dialog__container"
>
</div>
`;

exports[`LskDialogAddInvoice should match snapshot: dialog visible 1`] = `
<div role="dialog"
     class="v-dialog__container"
>
  <div role="document"
       tabindex="0"
       class="v-dialog__content v-dialog__content--active"
       style="z-index: 202;"
  >
    <transition-stub name="dialog-transition"
                     appear="true"
    >
      <div class="v-dialog v-dialog--active v-dialog--persistent"
           style="transform-origin: center center; max-width: 700px;"
      >
        <span>
          <form novalidate="novalidate"
                class="v-form"
          >
            <div class="v-card v-sheet theme--light">
              <div id="TEST_CIDTitle"
                   class="v-card__title"
              >
                Add new invoice
              </div>
              <div class="v-card__text">
                <div class="row row--dense">
                  <div class="col">
                    <div>
                      <div class="v-input v-input--has-state theme--light v-text-field v-text-field--is-booted success--text">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot">
                              <label for="TEST_CIDInvoiceDateInput"
                                     class="v-label theme--light success--text"
                                     style="left: 0px; position: absolute;"
                              >
                                Invoice date
                              </label>
                              <input id="TEST_CIDInvoiceDateInput"
                                     type="text"
                              >
                            </div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light success--text">
                              <transition-group-stub tag="div"
                                                     name="message-transition"
                                                     class="v-messages__wrapper"
                              >
                              </transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div class="col">
                    <div>
                      <div class="v-input v-input--has-state theme--light v-text-field v-text-field--is-booted success--text">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot">
                              <label for="TEST_CIDDueDateInput"
                                     class="v-label theme--light success--text"
                                     style="left: 0px; position: absolute;"
                              >
                                Due date
                              </label>
                              <input id="TEST_CIDDueDateInput"
                                     type="text"
                              >
                            </div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light success--text">
                              <transition-group-stub tag="div"
                                                     name="message-transition"
                                                     class="v-messages__wrapper"
                              >
                              </transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="row row--dense">
                  <div class="col">
                    <div>
                      <div class="v-input v-input--has-state theme--light v-text-field v-text-field--is-booted v-select success--text">
                        <div class="v-input__control">
                          <div role="button"
                               aria-haspopup="listbox"
                               aria-expanded="false"
                               aria-owns="list-24"
                               class="v-input__slot"
                          >
                            <div class="v-select__slot">
                              <label for="TEST_CIDCustomerIdInput"
                                     class="v-label theme--light success--text"
                                     style="left: 0px; position: absolute;"
                              >
                                Customer
                              </label>
                              <div class="v-select__selections">
                                <input id="TEST_CIDCustomerIdInput"
                                       readonly="readonly"
                                       type="text"
                                       aria-readonly="false"
                                       autocomplete="off"
                                >
                              </div>
                              <div class="v-input__append-inner">
                                <div class="v-input__icon v-input__icon--append">
                                  <i aria-hidden="true"
                                     class="v-icon notranslate mdi mdi-menu-down theme--light success--text"
                                  >
                                  </i>
                                </div>
                              </div>
                              <input type="hidden">
                            </div>
                            <div class="v-menu">
                            </div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light success--text">
                              <transition-group-stub tag="div"
                                                     name="message-transition"
                                                     class="v-messages__wrapper"
                              >
                              </transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="row row--dense">
                  <div class="col">
                    <div>
                      <div class="v-input v-input--has-state theme--light v-text-field v-text-field--is-booted v-select success--text">
                        <div class="v-input__control">
                          <div role="button"
                               aria-haspopup="listbox"
                               aria-expanded="false"
                               aria-owns="list-31"
                               class="v-input__slot"
                          >
                            <div class="v-select__slot">
                              <label for="TEST_CIDBillerIdInput"
                                     class="v-label theme--light success--text"
                                     style="left: 0px; position: absolute;"
                              >
                                Biller
                              </label>
                              <div class="v-select__selections">
                                <input id="TEST_CIDBillerIdInput"
                                       readonly="readonly"
                                       type="text"
                                       aria-readonly="false"
                                       autocomplete="off"
                                >
                              </div>
                              <div class="v-input__append-inner">
                                <div class="v-input__icon v-input__icon--append">
                                  <i aria-hidden="true"
                                     class="v-icon notranslate mdi mdi-menu-down theme--light success--text"
                                  >
                                  </i>
                                </div>
                              </div>
                              <input type="hidden">
                            </div>
                            <div class="v-menu">
                            </div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light success--text">
                              <transition-group-stub tag="div"
                                                     name="message-transition"
                                                     class="v-messages__wrapper"
                              >
                              </transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div class="v-card__actions">
                <div class="spacer">
                </div>
                <button type="button"
                        class="v-btn v-btn--has-bg theme--light v-size--small primary"
                        id="TEST_CIDCancelButton"
                >
                  <span class="v-btn__content">
                    Cancel
                  </span>
                </button>
                <button type="button"
                        disabled="disabled"
                        class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--small"
                        id="TEST_CIDSaveButton"
                >
                  <span class="v-btn__content">
                    Save
                  </span>
                </button>
              </div>
            </div>
          </form>
        </span>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`LskDialogAddInvoice should match snapshot: error messages 1`] = `
<div role="dialog"
     class="v-dialog__container"
>
  <div role="document"
       tabindex="0"
       class="v-dialog__content v-dialog__content--active"
       style="z-index: 202;"
  >
    <transition-stub name="dialog-transition"
                     appear="true"
    >
      <div class="v-dialog v-dialog--active v-dialog--persistent"
           style="transform-origin: center center; max-width: 700px;"
      >
        <span>
          <form novalidate="novalidate"
                class="v-form"
          >
            <div class="v-card v-sheet theme--light">
              <div id="TEST_CIDTitle"
                   class="v-card__title"
              >
                Add new invoice
              </div>
              <div class="v-card__text">
                <div class="row row--dense">
                  <div class="col">
                    <div>
                      <div class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted error--text">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot">
                              <label for="TEST_CIDInvoiceDateInput"
                                     class="v-label v-label--active theme--light error--text"
                                     style="left: 0px; position: absolute;"
                              >
                                Invoice date
                              </label>
                              <input id="TEST_CIDInvoiceDateInput"
                                     type="text"
                              >
                            </div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light error--text"
                                 role="alert"
                            >
                              <transition-group-stub tag="div"
                                                     name="message-transition"
                                                     class="v-messages__wrapper"
                              >
                                <div class="v-messages__message">
                                  Invalid date
                                </div>
                              </transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div class="col">
                    <div>
                      <div class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted error--text">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot">
                              <label for="TEST_CIDDueDateInput"
                                     class="v-label v-label--active theme--light error--text"
                                     style="left: 0px; position: absolute;"
                              >
                                Due date
                              </label>
                              <input id="TEST_CIDDueDateInput"
                                     type="text"
                              >
                            </div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light error--text"
                                 role="alert"
                            >
                              <transition-group-stub tag="div"
                                                     name="message-transition"
                                                     class="v-messages__wrapper"
                              >
                                <div class="v-messages__message">
                                  Invalid date
                                </div>
                              </transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="row row--dense">
                  <div class="col">
                    <div>
                      <div class="v-input v-input--has-state theme--light v-text-field v-text-field--is-booted v-select error--text">
                        <div class="v-input__control">
                          <div role="button"
                               aria-haspopup="listbox"
                               aria-expanded="false"
                               aria-owns="list-61"
                               class="v-input__slot"
                          >
                            <div class="v-select__slot">
                              <label for="TEST_CIDCustomerIdInput"
                                     class="v-label theme--light error--text"
                                     style="left: 0px; position: absolute;"
                              >
                                Customer
                              </label>
                              <div class="v-select__selections">
                                <input id="TEST_CIDCustomerIdInput"
                                       readonly="readonly"
                                       type="text"
                                       aria-readonly="false"
                                       autocomplete="off"
                                >
                              </div>
                              <div class="v-input__append-inner">
                                <div class="v-input__icon v-input__icon--append">
                                  <i aria-hidden="true"
                                     class="v-icon notranslate mdi mdi-menu-down theme--light error--text"
                                  >
                                  </i>
                                </div>
                              </div>
                              <input type="hidden"
                                     value="INVALID CUSTOMER ID"
                              >
                            </div>
                            <div class="v-menu">
                            </div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light error--text"
                                 role="alert"
                            >
                              <transition-group-stub tag="div"
                                                     name="message-transition"
                                                     class="v-messages__wrapper"
                              >
                                <div class="v-messages__message">
                                  Invalid customer id
                                </div>
                              </transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="row row--dense">
                  <div class="col">
                    <div>
                      <div class="v-input v-input--has-state theme--light v-text-field v-text-field--is-booted v-select error--text">
                        <div class="v-input__control">
                          <div role="button"
                               aria-haspopup="listbox"
                               aria-expanded="false"
                               aria-owns="list-68"
                               class="v-input__slot"
                          >
                            <div class="v-select__slot">
                              <label for="TEST_CIDBillerIdInput"
                                     class="v-label theme--light error--text"
                                     style="left: 0px; position: absolute;"
                              >
                                Biller
                              </label>
                              <div class="v-select__selections">
                                <input id="TEST_CIDBillerIdInput"
                                       readonly="readonly"
                                       type="text"
                                       aria-readonly="false"
                                       autocomplete="off"
                                >
                              </div>
                              <div class="v-input__append-inner">
                                <div class="v-input__icon v-input__icon--append">
                                  <i aria-hidden="true"
                                     class="v-icon notranslate mdi mdi-menu-down theme--light error--text"
                                  >
                                  </i>
                                </div>
                              </div>
                              <input type="hidden"
                                     value="INVALID BILLER ID"
                              >
                            </div>
                            <div class="v-menu">
                            </div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light error--text"
                                 role="alert"
                            >
                              <transition-group-stub tag="div"
                                                     name="message-transition"
                                                     class="v-messages__wrapper"
                              >
                                <div class="v-messages__message">
                                  Invalid biller id
                                </div>
                              </transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="red--text font-weight-bold">
                  ERROR ONE
                </div>
                <div class="red--text font-weight-bold">
                  ERROR TWO
                </div>
              </div>
              <div class="v-card__actions">
                <div class="spacer">
                </div>
                <button type="button"
                        class="v-btn v-btn--has-bg theme--light v-size--small primary"
                        id="TEST_CIDCancelButton"
                >
                  <span class="v-btn__content">
                    Cancel
                  </span>
                </button>
                <button type="button"
                        class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--small"
                        id="TEST_CIDSaveButton"
                        disabled="disabled"
                >
                  <span class="v-btn__content">
                    Save
                  </span>
                </button>
              </div>
            </div>
          </form>
        </span>
      </div>
    </transition-stub>
  </div>
</div>
`;
